--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="google_button">login google </string>
 
     <string name="rupiah">Rp%d</string>
+    <string name="barang">%d barang</string>
 
     <string name="error_empty_data">Data cannot be empty</string>
     <string name="error_empty_name">Please insert your name</string>
