--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,7 @@
     <string name="error_invalid_email">Invalid email</string>
     <string name="error_password_more_7">Password must more than 7 character</string>
     <string name="product_title">Product</string>
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
